Christian's last commit

--- a/craft/templates/pages/_entry.html
+++ b/craft/templates/pages/_entry.html
@@ -263,7 +263,7 @@
 		<div id="panel-{{ tabGroupId }}-{{ loop.index }}" aria-labelledby="tab-{{ tabGroupId }}-{{ loop.index }}" class="block block--blue block--center tab-list__panel" role="tabpanel" aria-hidden="true">
 			<div class="container">
 				<h2>{{ tab.tabTitle }}</h1>
-				<p>{{ tab.tabContent }}</p>
+				<p link=#fff>{{ tab.tabContent }}</p>
 			</div>
 		</div>
 		{% endfor %}
