Added Christian's changes to SASS files, fixed invalid tag in entry template

--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -29,7 +29,7 @@ body {
   font-family: $fonts;
   font-size:   1em;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 3; // ORIGINAL: 1.5
 }
 
 
