--- a/public/sass/base/_layout.scss
+++ b/public/sass/base/_layout.scss
@@ -25,10 +25,10 @@ body {
 
 .block {
 	width:100%;
-	padding:4.375rem 0;
+	padding:2rem 0; // ORIGINAL: 4.375rem 0;
 
 	@include mq(tab) {
-		padding:7rem 0;
+		padding:2rem 0; // ORIGINAL: 7rem 0;
 	}
 }
 
