--- a/public/sass/includes/_mixins.scss
+++ b/public/sass/includes/_mixins.scss
@@ -256,7 +256,7 @@
     top:0;right:0;left:0;bottom:0;
     z-index:1;
     @include gradient($bottom-left,$top-right);
-    opacity:0.8;
+    opacity: 0.5; // ORIGINAL: 0.8;
   }
 
   .container {
