--- a/public/sass/modules/_products.scss
+++ b/public/sass/modules/_products.scss
@@ -21,7 +21,7 @@
     display:block;    
     color: $white;
     text-align: center;
-    font-weight:900;
+    font-weight:400; // ORIGINAL: 900;
     font-size:1.625rem;
 }
 
